--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 dist
 tmp
 out-tsc
+*.tsbuildinfo
 
 # dependencies
 node_modules
@@ -12,6 +13,7 @@ node_modules
 /.idea
 .project
 .classpath
+.history
 .c9/
 *.launch
 .settings/
