--- a/auth-api-e2e/tsconfig.json
+++ b/auth-api-e2e/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "outDir": "out-tsc/@org/auth-api-e2e",
+    "outDir": "out-tsc/@focoris/auth-api-e2e",
     "esModuleInterop": true,
     "noUnusedLocals": false,
     "noImplicitAny": false
