--- a/gateway-e2e/package.json
+++ b/gateway-e2e/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@org/gateway-e2e",
+  "name": "@focoris/gateway-e2e",
   "version": "0.0.1",
   "private": true,
   "nx": {
     "implicitDependencies": [
-      "@org/gateway"
+      "@focoris/gateway"
     ],
     "targets": {
       "e2e": {
@@ -17,8 +17,8 @@
           "passWithNoTests": true
         },
         "dependsOn": [
-          "@org/gateway:build",
-          "@org/gateway:serve"
+          "@focoris/gateway:build",
+          "@focoris/gateway:serve"
         ]
       }
     }
