--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@org/source",
+  "name": "@focoris/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "@nestjs/cli": "^11.0.16",
     "@eslint/js": "^9.8.0",
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.0",
@@ -40,8 +41,10 @@
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.55.0",
     "axios": "^1.6.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "source-map-support": "^0.5.21"
   }
 }
