--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,11 +34,13 @@ jobs:
         with:
           version: 9
 
-      - run: pnpm install --frozen-lockfile
+      - run: corepack enable
+
+      - run: corepack pnpm install --frozen-lockfile
 
       # Prepend any command with "nx record --" to record its logs to Nx Cloud
-      - run: pnpm exec nx record -- pnpm exec nx format:check --base="remotes/origin/main"
-      - run: pnpm exec nx run-many -t lint test build typecheck e2e-ci
+      - run: corepack pnpm exec nx record -- corepack pnpm exec nx format:check --base="remotes/origin/main"
+      - run: corepack pnpm exec nx run-many -t lint test build typecheck e2e-ci
       # Nx Cloud recommends fixes for failures to help you get CI green faster. Learn more: https://nx.dev/ci/features/self-healing-ci
-      - run: pnpm exec nx fix-ci
+      - run: corepack pnpm exec nx fix-ci
         if: always()
