--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,8 +39,8 @@ jobs:
       - run: corepack pnpm install --frozen-lockfile
 
       # Prepend any command with "nx record --" to record its logs to Nx Cloud
-      - run: corepack pnpm exec nx record -- corepack pnpm exec nx format:check --base="remotes/origin/main"
-      - run: corepack pnpm exec nx run-many -t lint test build typecheck e2e-ci
+      - run: npx nx record -- npx nx format:check --base="remotes/origin/main"
+      - run: npx nx run-many -t lint test build typecheck e2e-ci
       # Nx Cloud recommends fixes for failures to help you get CI green faster. Learn more: https://nx.dev/ci/features/self-healing-ci
-      - run: corepack pnpm exec nx fix-ci
+      - run: npx nx fix-ci
         if: always()
