--- a/auth-api/package.json
+++ b/auth-api/package.json
@@ -96,11 +96,13 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.0",
+    "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.0",
     "@nestjs/platform-express": "^11.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@nestjs/testing": "^11.0.0"
