--- a/gateway/package.json
+++ b/gateway/package.json
@@ -99,10 +99,10 @@
     "@nx/webpack": "22.5.0",
     "express": "^5.2.1",
     "http-proxy": "^1.18.1",
-    "joi": "^18.0.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@nestjs/testing": "^11.0.0",
